--- a/DM_CA2.ipynb
+++ b/DM_CA2.ipynb
@@ -4464,9 +4464,9 @@
    "id": "eef1cee3",
    "metadata": {},
    "source": [
-    "# ??? moghayese 3 natige\n",
+    "# ? moghayese 3 natige\n",
     "\n",
-    "As the amount of min-support increases, the number of frequent itemsets decreases because we impose more restrictions on the *support >= min_support* condition."
+    "As the value of min-support increases, the number of frequent itemsets decreases because we impose more restrictions on the *support >= min_support* condition."
    ]
   },
   {
@@ -5287,7 +5287,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c516ddeb",
+   "id": "917f278e",
    "metadata": {},
    "outputs": [
     {
@@ -5394,7 +5394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc8c7df",
+   "id": "defe7573",
    "metadata": {},
    "source": [
     "Three rules with the highest lift:\n",
@@ -5546,7 +5546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "ce97d4e9",
    "metadata": {},
    "outputs": [
@@ -5567,7 +5567,8 @@
    "id": "4784f5a7",
    "metadata": {},
    "source": [
-    "# ??? ellat taghyir tedad ghavanin"
+    "# ? ellat taghyir tedad ghavanin\n",
+    "The number of rules decreased because as the value of min-confidence increases, the number of frequent itemsets decreases because we impose more restrictions on the *confidence >= min_confidence* condition."
    ]
   },
   {
