--- a/DM_CA2.ipynb
+++ b/DM_CA2.ipynb
@@ -18,7 +18,7 @@
     "## Introduction\n",
     "Shopping cart analysis is one of the key techniques used to discover the relationship between items and provides information to understand customer buying behavior. This analysis is done by looking for a combination of items that are often found in transactions.\n",
     "\n",
-    "In this computer assignment, we first examine the data and then move on to extracting **frequent itemsets** and **association rules**."
+    "In this computer assignment, we first examine the data and then move on to extracting **Frequent Itemsets** and **Association Rules**."
    ]
   },
   {
